Step 1 to Step 4

--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <title>The Silver Crystal...aka...Christina Lott's Webpage</title>
     </head>
     <body>
+        <div id="all contents">
+            <nav>
+            </nav>
+            <main>
+                <div class="sidebar">
+                </div>
+                <div class="content">
+                </div>
+            </main>
+        </div>
     </body>
 </html>
