--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
                 <div class="sidebar">
                 </div>
                 <div class="content">
+                    <h2>Lady Christina Lott</h2>
+                    <p>Program Manager</p>
+                    <div class="interests">
+                        <h3>Interests</h3>
+                        <ul>
+                            <li>Sailor Moon</li>
+                            <li>Drawing</li>
+                            <li>Learning</li>
+                        </ul>
+                    </div>
                 </div>
             </main>
         </div>
