--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             </nav>
             <main>
                 <div class="sidebar">
+                    <img src="https://prettysoldierproject.files.wordpress.com/2015/01/110.png" alt="Pretty Solider Sailor Moon">
                 </div>
                 <div class="content">
                     <h2>Lady Christina Lott</h2>
