--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>The Silver Crystal...aka...Christina Lott's Webpage</title>
+        <title>Christina Lott's Webpage</title>
     </head>
     <body>
         <div id="all contents">
             <nav>
+                <h1>"The Silver Crystal...aka Christina Lott's Webpage"</h1>
+                <ul>
+                    <li>
+                        <a href="index.html"> Home </a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html"> Portfolio </a>
+                    </li>
+                </ul>
             </nav>
             <main>
                 <div class="sidebar">
